WIP: Usable on mobile but in a buggy state

--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,9 @@
 :root {
+  --main: #000000;
+  --text: #646cff;
+}
+
+:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -28,6 +33,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-bottom: 10rem;
 }
 
 h1 {
@@ -42,7 +48,6 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -66,6 +71,11 @@ button:focus-visible {
 }
 
 @media (prefers-color-scheme: light) {
+  :root {
+    --main: #ffffff;
+    --text: #646cff;
+  }
+
   :root {
     color: #213547;
     background-color: #ffffff;
